--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-web/src/main/resources/META-INF/resources/admin/exceptions.jspf
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-web/src/main/resources/META-INF/resources/admin/exceptions.jspf
@@ -98,6 +98,7 @@
 </liferay-ui:error>
 
 <liferay-ui:error exception="<%= FormInstanceNameException.class %>" message="please-enter-a-valid-form-name" />
+<liferay-ui:error exception="<%= FormInstanceRecordExporterException.class %>" message="unable-to-export-form-entries" />
 <liferay-ui:error exception="<%= FormInstanceSettingsRedirectURLException.class %>" message="the-specified-redirect-url-is-not-allowed" />
 <liferay-ui:error exception="<%= StorageException.class %>" message="please-enter-a-valid-form-settings" />
 <liferay-ui:error exception="<%= StructureDefinitionException.class %>" message="please-enter-a-valid-form-definition" />
