LPS-90841 Fix styling of options in select

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/META-INF/resources/metal/css/form-builder/_field-settings.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/META-INF/resources/metal/css/form-builder/_field-settings.scss
@@ -14,4 +14,8 @@ $c: '.ddm-field-settings';
 	.alloy-editor {
 		width: 100%;
 	}
+
+	.ddm-field-options-container .ddm-field-text {
+		padding-right: 30px;
+	}
 }
